<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ime_settings_activity_name">汉王拼音输入法</string>
    <string name="ime_name">汉王速记输入法</string>
    <string name="app_name">SuluPen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_notebook">NoteBook</string>
    <string name="title_new_notebook">New NoteBook</string>
    <string name="title_settings">Setting</string>
    <string name="title_about">About us</string>
    <string name="edit_new">New</string>
    <string name="edit_edit">Edit</string>
    <string name="edit_search">Search</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_done">Done</string>
    <string name="search_note">Search note</string>
    <string name="choose_notes">Select</string>
    <string name="new_notebook_tips">Input NoteBook Name</string>
    <string name="default_notebookname">NoteBook</string>
    <string name="change_notebook">Change NoteBook</string>
    <string name="setting_item_inputmethod">Inputmethod Setting</string>
	<string name="setting_item_upgrade">Auto Upgrade</string>
	<string name="setting_item_clear_buffer">Clear Buffers</string>
	<string name="setting_item_help_manual">Help Manual</string>
	<string name="setting_item_feedback">Feedback</string>
	<string name="setting_item_about">About us</string>
	<string name="setting_item_logout">Logout</string>
	<string name="leftmenu_count">Count</string>
	<string name="leftmenu_setting">Setting</string>
	<string name="leftmenu_cloud">Cloud</string>
	<string name="feedback_thanks">Thanks</string>
	<string name="feedback_tip_question">Questions</string>
    <string name="feedback_tip_email">Email</string>
    <string name="feedback_tip_inputs_question">Your question</string>
    <string name="feedback_tip_inputs_email">For replay</string>
    <string name="feedback_commit">Commit</string>
    <string name="feedback_content_null">No content</string>
    <string name="feedback_mail_null">请填写您的邮箱</string>
    <string name="feedback_mail_addr_err">Mail addr error</string>
    <string name="feedback_progress">Sending...</string>
    <string name="feedback_error">Network error</string>
    <string name="feedback_upload_done">Commit success</string>
	<string name="del_notebook_tip">Delete NoteBook?</string>
    
	<string name="about_advertise">速录笔,有你的日子,学习生活更简单,更轻松,更便捷！</string>
	
    <string name="bluetooth_connected">蓝牙连接中...</string>
    <string name="msg_openingBT">蓝牙开启中...</string>
    <string name="title_openingBT">打开蓝牙</string>
    <string name="scanning">搜索中...</string>
    <string name="msg_searching">正在查找设备....</string>
     <string name="none_found">没有发现设备</string>
    <string name="button_scan">再次扫描</string>
    <string name="button_cancel">取消</string>
     <string name="bnTryAgain">再试一次</string>
     <string name="msg_fail">连接失败</string>
     <string name="bn_reconnect">重新连接</string>
     <string name="bnSearchNewDevice">搜索新设备</string>
     <string name="msg_wait_connect">连接中...</string>
     <string name="msg_stop_connected">确定与速录笔断开连接吗？</string>

    <string name="button_save">保存</string>
    <string name="new_note">新笔记</string>
    <string name="note_tag">笔记本</string>
    <string name="note_title_hint">输入标题</string>
    <string name="note_content_hint">总要留下点什么吧！</string>
     
        



    <string name="share_name">分享</string>
    <string name="share_filenamelabel">文件名称</string>
    <string name="create_link">生成链接</string>
    <string name="create_doc">生成文档</string>
    <string name="update_label">上传</string>
      
    <!-- 登录注册用到的标题 -->
    <string name="login_user">邮箱/手机</string>
    <string name="auth_code">验证码</string>
    <string name="login_pwd">密码</string>
    <string name="rgst_pwd">请设置密码，6-16位字母和数字组合</string>
    <string name="register_user">注册</string>
    <string name="login_third">----第三方登录----</string>
    <string name="login_button">登录</string>
    <string name="rgst_button">注册</string>
    <string name="rgst_email">邮箱注册</string>
    <string name="rgst_phone_user">请输入你的手机号</string>
    <string name="rgst_email_user">请输入你的常用邮箱地址</string>
    <string name="remember_pwd">忘记密码?</string>
    <string name="resetpwd_button">重设密码</string>
    <string name="resetpwd_doc">输入已注册的手机号或邮箱</string>
    <string name="resetpwd_reset">请输入新密码</string>
    <string name="new_passwd">新密码</string>
    <string name="ensure_new_passwd">确认新密码</string>
    <string name="reset_passwd_error">格式有误请输入6-16位字母和数字组合密码</string>
    <string name="pwd_format">6-16位数字和字母组合</string>
    <string name="ensure">确定</string>
    <string name="rmb_time">重新发送验证码(60s)</string>
    <string name="back">返回</string>
    <string name="forget_pwd">找回密码</string>
    <string name="empty_notebooklist_tips">NoteBook is empty</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="client_error">未安装第三方客户端,请先进行第三方客户端的安装!</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <!-- 账户基本信息显示用到的字段 -->
    <string name="account">账户</string>
    <string name="account_message">账户信息</string>
    <string name="myaccount">我的账户</string>
    <string name="show_account">用户账号</string>
    <string name="nickname">名字</string>
    <string name="modify_nickname">未填写</string>
    <string name="password_safety">密码安全</string>
    <string name="modify_passwd">修改密码</string>
    <string name="third_login">第三方</string>
    <string name="third_bind">第三方绑定</string>
    <string name="loginout">退出登录</string>
    <string name="modify_name">请输入您的名字</string>
    <string name="third_sina">&#160;&#160;新浪微博</string>
    <string name="third_qq">&#160;&#160;QQ</string>
    <string name="third_weixin">&#160;&#160;微信</string>
    <string name="third_unbind">未绑定</string>
    <!-- 硬件基本信息显示 -->
    <string name="hw_electricity">电量：</string>
    <string name="hw_status">状态：</string>
    <string name="hw_status_conn">已连接</string>
    <string name="hw_status_not_conn">未连接</string>
    <string name="hw_sn">硬件版本:</string>
    <string name="hw_sn_number">0000-0000-0000-0000</string>
    <string name="hw_function">功能键设定</string>
    <string name="hw_recognition">识别核心设定</string>
    <string name="hw_sleep">休眠时间设定</string>
    <string name="hw_shutdown">关机时间设定</string>
    <string name="hw_scandir">扫描方向</string>
    <string name="hw_restore">恢复出厂设置</string>
    <string name="comeback_tips">重要提示</string>
    <string name="comeback_message">将恢复默认设置</string>
     
      
           <!-- 添加图片用到的 -->
    <string name="publish_empty_text">想说什么…</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_local">从相册中选取</string>
    
      <string name="tip">提示</string>
      <string name="msg_hint_delete_note">确定要删除这条笔记吗？</string>
      <string name="bn_sure">确定</string>
      
      
    <!-- Used by the toggle keys in soft keyboards. -->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>
      
    
    <string name="translate_switch">翻译模式</string>
    <string name="auto">自动检测</string>
    <string name="orignal_language">源语言:</string>
    <string name="target_language">目标语言:</string>
    <string name="translate_failed">翻译失败</string>
    <string name="translate_connect_failed">网络连接失败，请检查网络</string>
    

    <!-- setting title -->
    <string name="setting">设置</string>
    <string name="setting_sound_key_title">按键声音</string>
    <string name="setting_vibrate_title">按键震动</string>
    <string name="setting_prediction_title">联想输入</string>
    <string name="setting_switch_title">中英文切换</string>
    <string name="setting_version_title">版本更新</string>
    <string name="setting_feedback_title">意见反馈</string>
    <string name="setting_help_title">帮助</string>
    <string name="setting_about_us_title">关于我们</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>
    
        <!-- Setting -->
    <string name="title_feedback">意见反馈</string>
    <string name="title_help">帮助手册</string>
    <string name="title_aboutUs">关于我们</string>
    <string name="title_chooseFilies">选择文档</string>
    <string name="title_device_detail">蓝牙速录笔设置</string>
    <string name="title_other_setting">其他</string>
    <string name="title_input_setting">输入相关</string>
    <string name="title_epen_setting">速录笔相关</string>
    <string name="title_start_hanvoninput">启用汉王输入法</string>
    <string name="title_keyboard_setting">按键设置</string>
    
    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>
    
        <!-- epen setting summary -->
    <string name="setting_enabled">开启</string>
    <string name="setting_disabled">关闭</string>
    
    <string name="setting_clear_buffer">Clear buffers</string>
    
    <string name="input_reach_max">Reach max length</string>
    <string name="same_notebook_name">The notebook is exist</string>
    <string name="notebook_name_null">The notebook name is empty</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    
    <string name="link_mess">生成连接中，请等待...</string>
    <string name="share_from_hanvon">来自汉王速记的分享</string>
    
     <string name="start_input">启用汉王输入法</string>
	<string name="open_guide_first">选择汉王输入法</string>
    <string name="open_guide_second">切换到汉王输入法</string>
    <string name="open_bn_choose">去勾选></string>
    <string name="open_bn_choosed">已勾选</string>
    <string name="open_bn_switch">去切换></string>
    <string name="open_bn_switched">已切换</string>
    <string name="string_year">Year</string>


</resources>
