<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <RelativeLayout 
    android:id="@+id/rl_title"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_alignParentTop="true" >
    
    	<TextView
        android:id="@+id/tv_back_btn"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_alignParentLeft="true"
    	android:layout_marginLeft="8dp"
    	android:layout_marginRight="8dp"
    	android:textColor="#3b8989"
    	android:text="@string/edit_cancel"
    	android:textSize="16sp"
    	android:gravity="center_vertical"/>
    
        <TextView
        android:id="@+id/tv_cancel_change_notebook_btn"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_alignParentRight="true"
    	android:layout_marginLeft="8dp"
    	android:layout_marginRight="8dp"
    	android:text="@string/edit_done"
    	android:textSize="16sp"
    	android:textColor="#3b8989"
    	android:gravity="center_vertical"/>
        
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/tv_cancel_change_notebook_btn"
            android:layout_toRightOf="@id/tv_back_btn"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/change_notebook"
            android:textSize="20sp"/>        
	</RelativeLayout>
	
    <RelativeLayout 
        android:id="@+id/rl_tips"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#e2e2e2"
        android:layout_below="@id/rl_title">
        
        <ImageView 
            android:id="@+id/iv_add_new_notebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/new_notebook"
            />
        
        <TextView
        android:id="@+id/tv_newnotebook"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_toRightOf="@id/iv_add_new_notebook"
    	android:layout_marginLeft="8dp"
    	android:layout_marginRight="8dp"
    	android:text="@string/title_new_notebook"
    	android:textSize="16sp"
    	android:textColor="#959595"
    	android:gravity="center_vertical"/>
    

        
    </RelativeLayout>
    
    <ListView
        android:id="@+id/lv_list_of_change_notebook"
        android:layout_below="@id/rl_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
                >
        
    </ListView>

</RelativeLayout>
