<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
    android:id="@+id/rl_title"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_alignParentTop="true"
    android:background="#f6f6f6" >
    
    	<TextView
        android:id="@+id/tv_cancel_btn"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_alignParentLeft="true"
    	android:layout_marginLeft="15dp"
    	android:layout_marginRight="8dp"
    	android:textColor="#3b8989"
    	android:text="@string/edit_cancel"
    	android:textSize="14sp"
    	android:gravity="center_vertical"/>
    
        <TextView
        android:id="@+id/tv_done_btn"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_alignParentRight="true"
    	android:layout_marginLeft="8dp"
    	android:layout_marginRight="15dp"
    	android:text="@string/edit_done"
    	android:textSize="14sp"
    	android:textColor="#3b8989"
    	android:gravity="center_vertical"/>
        
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/tv_done_btn"
            android:layout_toRightOf="@id/tv_cancel_btn"
            android:layout_centerHorizontal="true"
           	android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_new_notebook"
            android:textColor="#4d4d4d"
            android:textSize="16sp"/>        
	</RelativeLayout>
	
    <RelativeLayout 
        android:id="@+id/rl_tips"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#e2e2e2"
        android:layout_below="@id/rl_title">
        
        <TextView
        android:id="@+id/tv_newnotebook"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_alignParentLeft="true"
    	android:layout_marginLeft="15dp"
    	android:layout_marginRight="15dp"
    	android:text="@string/new_notebook_tips"
    	android:textSize="14sp"
    	android:textColor="#959595"
    	android:gravity="center_vertical"/>
    

        
    </RelativeLayout>


    
    <RelativeLayout
        android:id="@+id/rl_input"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@id/rl_tips"
        android:layout_above="@id/rl_newnote">
        
       	<EditText
       	    android:id="@+id/ed_input_notebookname"
       	    android:layout_width="match_parent"
       	    android:layout_height="match_parent"
       	    android:textColor="#c8c8c8"
       	    android:background="@null"
       	    android:paddingLeft="16dp"/>
        
    </RelativeLayout>
    

</RelativeLayout>
